cloud-service-providers/azure/blueprints/cds-blueprint-aks/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: simple-ingress
  labels:
    app.kubernetes.io/managed-by: cds-blueprint
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/proxy-body-size: "500m"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "600"
spec:
  ingressClassName: nginx
  tls:
  - secretName: visual-search-tls
  rules:
  - http:
      paths:
      - path: /api/
        pathType: Prefix
        backend:
          service:
            name: visual-search
            port:
              number: 8888
      - path: /
        pathType: Prefix
        backend:
          service:
            name: visual-search-react-ui
            port:
              number: 8080
